# pyStockHouse

./: .gitignore  LICENSE  README.md  pyproject.toml
PyStockHouse/: articulo.py  auth.py  db.py  lugar.py  schema.sql
PyStockHouse/static/: style.css
PyStockHouse/templates/: base.html
PyStockHouse/templates/articulo/: create.html  update.html
PyStockHouse/templates/auth/: login.html
PyStockHouse/templates/lugar/: update.html
flaskr/: __init__.py  articulo.py  auth.py  lugar.py  schema.sql
flaskr/templates/: base.html
flaskr/templates/articulo/: create.html  index.html
flaskr/templates/auth/: register.html
flaskr/templates/lugar/: create.html  index.html
tests/: conftest.py  data.sql  test_articulo.py  test_auth.py  test_db.py  test_factory.py  test_lugar.py
