[project]
name = "PyStockHouse"
version = "1.0.0"
authors = [
    {name="Francisco Quiroz Allende",email="fg.quirozallende@gmail.com"}
]
description = "Una aplicación simple para llevar inventario de articulos en tu casa"
readme = "README.md"
dependencies = [
    "flask",
]
requires-python = ">=3.11.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpath = ["tests"]

[tool.coverage.run]
branch = true
source = ["PyStockHouse"]
